[package]
name = "models"
version = "0.1.0"
authors = ["Tom Kirchner <tjk@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
build = "build.rs"
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
bottlerocket-release = { path = "../bottlerocket-release", version = "0.1" }
libc = "0.2"
model-derive = { path = "model-derive", version = "0.1" }
modeled-types = { path = "modeled-types", version = "0.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# settings extensions
settings-extension-autoscaling = { path = "../settings-extensions/autoscaling", version = "0.1" }
settings-extension-aws = { path = "../settings-extensions/aws", version = "0.1" }
settings-extension-bootstrap-containers = { path = "../settings-extensions/bootstrap-containers", version = "0.1" }
settings-extension-cloudformation = { path = "../settings-extensions/cloudformation", version = "0.1" }
settings-extension-container-registry = { path = "../settings-extensions/container-registry", version = "0.1" }
settings-extension-container-runtime = { path = "../settings-extensions/container-runtime", version = "0.1" }
settings-extension-dns = { path = "../settings-extensions/dns", version = "0.1" }
settings-extension-ecs = { path = "../settings-extensions/ecs", version = "0.1" }
settings-extension-host-containers = { path = "../settings-extensions/host-containers", version = "0.1" }
settings-extension-kernel = { path = "../settings-extensions/kernel", version = "0.1" }
settings-extension-metrics = { path = "../settings-extensions/metrics", version = "0.1" }
settings-extension-motd = { path = "../settings-extensions/motd", version = "0.1" }
settings-extension-network = { path = "../settings-extensions/network", version = "0.1" }
settings-extension-ntp = { path = "../settings-extensions/ntp", version = "0.1" }
settings-extension-oci-defaults = { path = "../settings-extensions/oci-defaults", version = "0.1" }
settings-extension-oci-hooks = { path = "../settings-extensions/oci-hooks", version = "0.1" }
settings-extension-pki = { path = "../settings-extensions/pki", version = "0.1" }
settings-extension-updates = { path = "../settings-extensions/updates", version = "0.1" }

# settings plugins
[dependencies.bottlerocket-settings-plugin]
git = "https://github.com/bottlerocket-os/bottlerocket-settings-sdk"
tag = "bottlerocket-settings-plugin-v0.1.0"
version = "0.1.0"

[build-dependencies]
generate-readme = { version = "0.1", path = "../generate-readme" }

[lib]
# We're loading the correct *model* at runtime, so users shouldn't think about
# importing *models* (plural), just the one current model.
name = "model"
path = "src/lib.rs"
