[package]
name = "models"
version = "0.1.0"
authors = ["Tom Kirchner <tjk@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
build = "build.rs"
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
bottlerocket-release.workspace = true
libc.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true

# settings plugins
bottlerocket-settings-models.workspace = true
bottlerocket-settings-plugin.workspace = true

[build-dependencies]
generate-readme.workspace = true

[lib]
# We're loading the correct *model* at runtime, so users shouldn't think about
# importing *models* (plural), just the one current model.
name = "model"
path = "src/lib.rs"
