[package]
name = "netdog"
version = "0.1.0"
authors = ["Ben Cressey <bcressey@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[features]
default = []
wicked = []

[dependencies]
argh = "0.1"
dogtag = { version = "0.1", path = "../dogtag" }
ipnet = { version = "2", features = ["serde"] }
indexmap = { version = "1", features = ["serde"] }
envy = "0.4"
lazy_static = "1"
systemd-derive = { path = "systemd-derive", version = "0.1" }
quick-xml = { version = "0.26", features = ["serialize"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_plain = "1"
snafu = "0.8"
tokio = { version = "~1.32", default-features = false, features = ["macros", "rt-multi-thread", "time"] }  # LTS
toml = { version = "0.8", features = ["preserve_order"] }

[dev-dependencies]
tempfile = "3"
handlebars = "4"

[build-dependencies]
generate-readme = { version = "0.1", path = "../generate-readme" }
