[package]
name = "parse-datetime"
version = "0.1.0"
authors = ["Zac Mrowicki <mrowicki@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2018"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
chrono = "0.4.11"
snafu = { version = "0.7", features = ["backtraces-impl-backtrace-crate"] }

[build-dependencies]
generate-readme = { version = "0.1", path = "../generate-readme" }
