[package]
name = "prairiedog"
version = "0.1.0"
authors = ["Arnaldo Garcia Rincon <agarrcia@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2018"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
argh = "0.1.3"
log = "0.4"
nix = "0.23"
signpost = { path = "../updater/signpost", version = "0.1.0" }
simplelog = "0.10"
snafu = "0.7"

[build-dependencies]
cargo-readme = "3.1"
