[package]
name = "shimpei"
version = "0.1.0"
authors = ["Arnaldo Garcia Rincon <agarrcia@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2018"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
log = "0.4"
simplelog = "0.11"
snafu = "0.7"
nix = "0.23"

[build-dependencies]
buildsys = { path = "../../tools/buildsys", version = "0.1.0" }
