[package]
name = "shimpei"
version = "0.1.0"
authors = ["Arnaldo Garcia Rincon <agarrcia@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
log = "0.4"
simplelog = "0.12"
snafu = "0.7"
nix = "0.26"

[build-dependencies]
generate-readme = { version = "0.1", path = "../generate-readme" }
