[package]
name = "static-pods"
version = "0.1.0"
authors = ["Erikson Tung <etung@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
build = "build.rs"
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
base64 = "0.21"
log = "0.4"
modeled-types = { path = "../models/modeled-types", version = "0.1" }
serde = { version = "1", features = ["default"]}
simplelog = "0.12"
snafu = "0.8"
toml = "0.8"
tempfile = "3"

[build-dependencies]
generate-readme = { version = "0.1", path = "../generate-readme" }
