[package]
name = "webpki-roots"
version = "0.20.0"
authors = ["iliana destroyer of worlds <iweller@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2018"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
lazy_static = "1.4.0"
log = "0.4"
pem = "0.8.1"
webpki = "0.21.0"
